force-app/main/default/objects/Branch__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF(  Age__c  &gt;= 23 &amp;&amp;  Age__c  &lt; 25,  Annual_Fee__c  * 0.50,  Annual_Fee__c  * 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>