force-app/main/default/objects/Branch__c/fields/total_no_of_records__c.field-meta.xml
<CustomField>
    <fullName>total_no_of_records__c</fullName>
    <label>total no of records</label>
    <summaryForeignKey>Student__c.Branch__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>