force-app/main/default/objects/Branch__c/validationRules/Age_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_rule</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c     &gt;   25</errorConditionFormula>
    <errorMessage>Enter Correct Age</errorMessage>
</ValidationRule>