force-app/main/default/objects/Branch__c/validationRules/branch_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>branch_validation</fullName>
    <active>true</active>
    <errorConditionFormula>total_no_of_records__c  &gt; 4</errorConditionFormula>
    <errorMessage>Enter correct Branch</errorMessage>
</ValidationRule>